# lab1_AMH

./: Lab1.ipynb  README.md  images.7z  pyproject.toml
unsupervised/dim_red/: pca.py  svd.py  tsne.py
